clusters/homelab-1/.network-policies/allow-egress-to-dragonfly/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-dragonfly
spec:
  podSelector:
    matchLabels:
      networking/allow-egress-to-dragonfly: "true"
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: storage
          podSelector:
            matchLabels:
              app.kubernetes.io/name: dragonfly
      ports:
        - protocol: TCP
          port: 6379
